# Zappy

./: .gitignore  Makefile  README.md  launch_zappy.sh  q  requirements.txt  zappy_gui  zappy_server
docs/: ai.md  client.md  collision_manager.md  elevation.md  movement.md  protocol.md  vision.md
linux/: zappy_gui.AppImage  zappy_server
macos/: zappy_server
src/GUI/: Makefile  zappy_gui
src/GUI/lib/: AnimationSystem.hpp  Core.hpp  Exceptions.hpp  Game_world.hpp  Gui_client.hpp  Input_handler.hpp  MusicManager.hpp  Network.hpp  NetworkManager.hpp  Parser.hpp  PlayerInfoPanel.hpp  RenderingEngine.hpp  Ressource_manager.hpp  Threads.hpp
src/GUI/src/: AnimationSystem.cpp  Core.cpp  Game_world.cpp  Gui_client.cpp  Input_handler.cpp  MusicManager.cpp  Network.cpp  NetworkManager.cpp  Parser.cpp  PlayerInfoPanel.cpp  RenderingEngine.cpp  Ressource_manager.cpp  Threads.cpp  main.cpp
src/SERVER/: CMakeLists.txt  Clock.c  Clock.h  Commandes.c  Commandes.h  Server.c  Server.h  SessionClient.h  Utilitaires.c  main.c  my.h
src/SERVER/Clock/: Clock.c  Clock.h  clock.c  clock.h
src/SERVER/Commandes/: Commandes.c  Commandes.h  command.h  command_queue.c  command_utils.c  commandes.c  commandes.h  commandes_2.c
src/SERVER/Logger/: logger.c  logger.h
src/SERVER/Map/: map.c  map.h  map_entities.c  map_management.c
src/SERVER/Server/: Server.c  Server.h  Server_t.c  Server_t.h  server.c  server.h  server_2.c  server_3.c  server_4.c  server_5.c  server_cleanup.c  server_command_handler.c  server_command_queue.c  server_core.c  server_egg_utils.c  server_init.c  server_network.c
src/SERVER/SessionClients/: SessionClient.c  SessionClient.h  sessionClient.c  sessionClient.h  session_client.c  session_client.h  session_client_ai.c  session_client_ai_cmd_1.c  session_client_ai_cmd_2.c  session_client_ai_cmd_3.c  session_client_gui.c  session_client_gui_cmd_1.c  session_client_gui_cmd_2.c  session_client_gui_notification_1.c  session_client_gui_notification_2.c  session_client_gui_notification_3.c  session_client_gui_notification_4.c
src/SERVER/Utilitaires/: Utilitaires.c  ai_utils.c  argument_parser_core.c  argument_parser_teams.c  client_utils.c  dynamic_buffer.c  dynamic_buffer.h  eject_utils.c  error.c  event_scheduler.c  fork_utils.c  gui_utils.c  incantation_utils.c  look_utils.c  utilitaires.c  utilitaires_2.c
src/ai/: ai.py  client.py  collision_manager.py  elevation_manager.py  inventory.py  logger.py  main.py  map.py  movement.py  player.py  protocol.py  requirements.txt  vision.py
src/ai/core/: client.py  protocol.py  vision.py
src/ai/managers/: collision_manager.py  elevation_manager.py  inventory.py  inventory_manager.py  movement.py  movement_manager.py  reproduction_manager.py  resource_manager.py  vision_manager.py
src/ai/models/: code.txt  map.py  (+2 more)
(+42 files in other folders)
